youfull/objects/eTools_Widget__c.object
<CustomObject>
    <fields>
        <fullName>Image_URL__c</fullName>
        <description>Will be URL to an image that is uploaded into the documents folders in salesforce</description>
        <label>Image_URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>eTools_Widgets</relationshipLabel>
        <relationshipName>eTools_Widgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Module_Type__c</fullName>
        <label>Module Type</label>
        <picklist>
            <picklistValues>
                <fullName>Coaching_Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earning_Illustrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My_Executive_Leaders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My_Sales_Leaders_Genealogy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My_Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>My_Team_Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New_Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report_Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title_Advancement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <description>The position on the eTools page that this widget will be displayed.</description>
        <label>Position</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Widget</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video-You Tube</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video-Windows Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video-Quick Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio-Quick Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audio-Windows Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>URL_to_Open__c</fullName>
        <description>The web link that the end-user will be navigated to when they click on the widget. For video and Audio types, this URL will be the URL pointing to the Video/Audio file.</description>
        <label>URL_to_Open</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>eTools_Widget</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>eTools_Widget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>eTools_Widgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Position_required_if_Type_is_Widget</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Type__c,&quot;Widget&quot;),ISBLANK(TEXT(Position__c)))</errorConditionFormula>
        <errorDisplayField>Position__c</errorDisplayField>
        <errorMessage>Position is Required for Widgets</errorMessage>
    </validationRules>
</CustomObject>